--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,27 +60,6 @@ hr {
 	color: #000;
 	background-color: rgba(256, 256, 256, 0.5);
 }
-.checkmark li {
-	display: block;
-	margin: 20px 0;
-	line-height: 30px; 
-	font-size: 18px;
-	font-weight: 400;
-}
-.checkmark li:before {
-	content: '';
-	display: inline-block;
-	width: 9px;
-	height: 15px;
-	border: solid;
-	border-width: 0 4px 4px 0;
-	-ms-transform: rotate(45deg);
-	-webkit-transform: rotate(45deg);
-	transform: rotate(45deg);
-	margin-right: 25px;
-	margin-left: 5px;
-	border-radius: 1px;
-}
 .center {
 	text-align: center;
 }
@@ -151,73 +130,72 @@ hr {
 	left: 50%;
 	bottom: 6%;
 	border: solid;
-	border-width: 0 5px 5px 0;
-	border-radius: 6px 4px;
+	border-width: 0 4px 4px 0;
+	border-radius: 4px 3px;
 	-ms-transform: rotate(45deg);
 	-webkit-transform: rotate(45deg);
 	transform: rotate(45deg);
 }
 .arrow:hover {
 	color: #eee;
-	box-shadow: 3px 2px 2px #555
+	box-shadow: 2px 1px 1px #555
 }
 .arrow:focus {
 	color: #eee;
 }
 .bounce {
-  -moz-animation: bounce 2s infinite;
-  -webkit-animation: bounce 2s infinite;
-  animation: bounce 2s infinite;
+  -moz-animation: bounce 5s infinite;
+  -webkit-animation: bounce 5s infinite;
+  animation: bounce 5s infinite;
 }
 		@-moz-keyframes bounce {
-		  0%, 20%, 50%, 80%, 100% {
+		  0%, 8%, 20%, 32%, 40%, 100% {
 		    -moz-transform: translateY(0);
 		    transform: translateY(0);
 		  }
-		  40% {
+		  16% {
 		    -moz-transform: translateY(-20px);
 		    transform: translateY(-20px);
 		  }
-		  60% {
+		  24% {
 		    -moz-transform: translateY(-10px);
 		    transform: translateY(-10px);
 		  }
 		}
 		@-webkit-keyframes bounce {
-		  0%, 20%, 50%, 80%, 100% {
+		  0%, 8%, 20%, 32%, 40%, 100% {
 		    -webkit-transform: translateY(0) rotate(45deg);
 		    transform: translateY(0) rotate(45deg);
 		  }
-		  40% {
+		  16% {
 		    -webkit-transform: translateY(-20px) rotate(45deg);
 		    transform: translateY(-20px) rotate(45deg);
 		  }
-		  60% {
+		  24% {
 		    -webkit-transform: translateY(-10px) rotate(45deg);
 		    transform: translateY(-10px) rotate(45deg);
 		  }
 		}
 		@keyframes bounce {
-		  0%, 20%, 50%, 80%, 100% {
+		  0%, 8%, 20%, 32%, 40%, 100% {
 		    -moz-transform: translateY(0) rotate(45deg);
 		    -ms-transform: translateY(0) rotate(45deg);
 		    -webkit-transform: translateY(0) rotate(45deg);
 		    transform: translateY(0) rotate(45deg);
 		  }
-		  40% {
+		  16% {
 		    -moz-transform: translateY(-20px) rotate(45deg);
 		    -ms-transform: translateY(-20px) rotate(45deg);
 		    -webkit-transform: translateY(-20px) rotate(45deg);
 		    transform: translateY(-20px) rotate(45deg);
 		  }
-		  60% {
+		  24% {
 		    -moz-transform: translateY(-10px) rotate(45deg);
 		    -ms-transform: translateY(-10px) rotate(45deg);
 		    -webkit-transform: translateY(-10px) rotate(45deg);
 		    transform: translateY(-10px) rotate(45deg);
 		  }
 		}
-
 
 
 /* ==========================================================================
@@ -247,6 +225,26 @@ hr {
 .iCan {
 	padding-top: 30px;
 }
+.checkmark li {
+	display: block;
+	margin: 20px 0;
+	line-height: 30px; 
+	font-size: 18px;
+}
+.checkmark li:before {
+	content: '';
+	display: inline-block;
+	width: 9px;
+	height: 15px;
+	border: solid;
+	border-width: 0 4px 4px 0;
+	-ms-transform: rotate(45deg);
+	-webkit-transform: rotate(45deg);
+	transform: rotate(45deg);
+	margin-right: 25px;
+	margin-left: 5px;
+	border-radius: 1px;
+}
 .curly {
 	font-size: 200px;
 	font-weight: 100;
@@ -262,7 +260,6 @@ hr {
 	width: 100%;
 	background-color: #FF5656;
 	padding-bottom: 80px;
-	/*color: #eee;*/
 }
 #benefits ul {
 	color: #eee;
