--- a/assets/css/slider.css
+++ b/assets/css/slider.css
@@ -208,7 +208,7 @@ label { cursor: pointer; }
 @media only screen and (max-width: 850px) and (min-width: 450px) {
 
   #slider #controls {
-    margin: -25% 0 0 15%;
+    margin: 0 0 0 15%;
     width: 70%;
     height: 50px;
   }
@@ -229,7 +229,7 @@ label { cursor: pointer; }
   }
 
   #slider #active {
-    margin: 22% 0 0;
+    margin: 6% 0 0;
   }
 
 }
@@ -262,13 +262,13 @@ label { cursor: pointer; }
 @media only screen and (max-width: 450px) {
 
   #slider #controls {
-    margin: -28% 0 0 24%;
+    margin: -5% 0 0 24%;
     width: 50%;
     height: 50px;
   }
 
   #slider #active {
-    margin: 23% 0 0;
+    margin: 8% 0 0;
   }
 
   #slider #slides {
@@ -283,11 +283,11 @@ label { cursor: pointer; }
   }
 
   #slider #controls label {
-    -moz-transform: scale(0.6);
-    -webkit-transform: scale(0.6);
-    -o-transform: scale(0.6);
-    -ms-transform: scale(0.6);
-    transform: scale(0.6);
+    -moz-transform: scale(0.8);
+    -webkit-transform: scale(0.8);
+    -o-transform: scale(0.8);
+    -ms-transform: scale(0.8);
+    transform: scale(0.8);
   }
 
 }
