--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,8 +95,19 @@ hr {
 	width: 100%;
 	height: 100%;
 	height: 101vh;
+	min-height: 400px;
 	text-align: center;
 	background-color: #00BFBF;
+}
+@media screen and (min-width: 450px) {
+  #header {
+    min-height: 600px;
+  }
+}
+@media screen and (min-width: 900px) {
+  #header {
+    min-height: 800px;
+  }
 }
 #name {
 	position: relative;
@@ -144,9 +155,9 @@ hr {
 	color: #eee;
 }
 .bounce {
+  animation: bounce 5s infinite;
   -moz-animation: bounce 5s infinite;
   -webkit-animation: bounce 5s infinite;
-  animation: bounce 5s infinite;
 }
 		@-moz-keyframes bounce {
 		  0%, 8%, 20%, 32%, 40%, 100% {
