--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,6 @@ html,
 body {
     height: 100%;
     background-color: #fff;
-    /*background-color: #f0f0f0;*/
 }
 body {
     font-family: 'Lato', sans-serif;
@@ -307,6 +306,7 @@ hr {
 }
 #skills ul {
     margin-bottom: 35px;
+    margin-left: 10px;
 }
 @media (min-width: 992px) and (max-width: 1199px) {
     #skills .double {
@@ -358,6 +358,10 @@ hr {
 }
 #projects h3:hover {
     color: #555
+}
+#projects article .demo-link {
+    margin-top: 10px;
+    color: #888;
 }
 #projects article > * {
     text-decoration: none;
